Bug 1064847 - Make media generated IOSurface global. r=mattwoodrow